<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Engineer.EngProfile"
    android:background="@color/background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcomecontractor"
            android:textColor="@color/colortext"
            android:textSize="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_25sdp"></TextView>

        <LinearLayout
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/square_box"
            android:layout_marginTop="@dimen/_25sdp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:textColorHint="@color/black"
                app:hintTextAppearance="@style/CustomTextAppearance1"
                android:textColor="@color/black"
                >

                <EditText
                    android:id="@+id/eteng_username"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_margin="@dimen/_10sdp"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/square_box"
            android:layout_marginTop="@dimen/_25sdp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                app:hintTextAppearance="@style/CustomTextAppearance1"
                android:hint="@string/mobnum">

                <EditText
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:id="@+id/eteng_mobilenum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:digits="0123456789"
                    android:maxLength="10"
                    android:textSize="@dimen/_15sdp"
                    />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_marginLeft="@dimen/md_25"
            android:layout_marginRight="@dimen/md_25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/square_box"
            android:layout_marginTop="@dimen/md_25">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                app:hintTextAppearance="@style/CustomTextAppearance1"
                android:hint="@string/areaofoperation">

                <EditText
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:id="@+id/eteng_areaofoperation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/black"


                    />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="@dimen/md_25"
            android:layout_marginRight="@dimen/md_25"
            android:background="@drawable/square_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/md_25">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                app:hintTextAppearance="@style/CustomTextAppearance1"
                android:hint="@string/address">

                <EditText
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:id="@+id/eteng_postaladdress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="@dimen/_15sdp"
                    />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>



        <LinearLayout
            android:layout_marginLeft="@dimen/md_25"
            android:layout_marginRight="@dimen/md_25"
            android:background="@drawable/square_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/md_25">



            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/spinn_eng_spinn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/workinghour"
                android:textColorHint="@color/black"
                app:hintTextAppearance="@style/CustomTextAppearance1"
                android:textColorHighlight="@color/black"
                android:layout_margin="10dp"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/black"
                android:background="@color/background"
                android:popupBackground="@color/background"
                />




        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="@dimen/md_25"
            android:layout_marginRight="@dimen/md_25"
            android:layout_width="match_parent"
            android:background="@drawable/square_box"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/messageTextInputLayout9"
                app:hintTextAppearance="@style/CustomTextAppearance1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:layout_margin="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/requiredlabor"
                    android:editable="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp"
                    android:id="@+id/textactivitytyp"/>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rg_interestedonworkingENG"
                    android:layout_column="0"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    android:layout_span="3">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radio_daily"
                        android:checked="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp"
                        android:text="@string/daily"></RadioButton>

                    <RadioButton
                        android:id="@+id/radio_weekly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_15sdp"
                        android:textColor="@color/black"
                        android:text="@string/weekly"></RadioButton>
                    <RadioButton
                        android:id="@+id/radio_monthly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_15sdp"
                        android:textColor="@color/black"
                        android:text="@string/monthly"></RadioButton>

                </RadioGroup>
            </com.google.android.material.textfield.TextInputLayout>



        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="@dimen/md_25"
            android:layout_marginRight="@dimen/md_25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/square_box"
            android:layout_marginTop="@dimen/md_25">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/refrename"
                app:hintTextAppearance="@style/CustomTextAppearance1"
                android:textColorHint="@color/black">

                <EditText
                    android:textColor="@color/black"
                    android:id="@+id/et_ref_nameE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="@dimen/_15sdp"


                    />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="@dimen/md_25"
            android:layout_marginRight="@dimen/md_25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/square_box"
            android:layout_marginTop="@dimen/md_25">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/refcode"
                app:hintTextAppearance="@style/CustomTextAppearance1"
                android:textColorHint="@color/black">

                <EditText
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:id="@+id/et_ref_codeE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="@dimen/_15sdp"


                    />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <Button
            android:text="@string/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_submiteng"
            android:layout_margin="25dp"
            android:textSize="@dimen/_15sdp"
            android:textColor="#ffffff"
            android:background="@drawable/capsulebutton"
            ></Button>

        <!--  <Button
              android:text="@string/logout"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/btn_logoutcontractor"
              android:layout_marginLeft="@dimen/md_25"
              android:layout_marginRight="@dimen/md_25"
              android:layout_marginTop="5dp"
              android:layout_marginBottom="@dimen/md_25"
              android:textColor="#ffffff"
              android:background="@color/colorAccent"
              ></Button>-->


    </LinearLayout>

</ScrollView>