<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Owner.OwnerProfile"
    android:background="@color/background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_marginLeft="@dimen/md_25"
            android:layout_marginRight="@dimen/md_25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcomeowner"
            android:textColor="@color/colortext"
            android:textSize="@dimen/md_15"
            android:layout_marginTop="@dimen/md_25"></TextView>

        <LinearLayout
            android:layout_marginLeft="@dimen/md_25"
            android:layout_marginRight="@dimen/md_25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/md_25">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username">

                <EditText
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:id="@+id/etowner_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="@dimen/md_25"
            android:layout_marginRight="@dimen/md_25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/md_25">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobnum">

                <EditText
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:id="@+id/etowner_mobilenum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:digits="0123456789"
                    android:maxLength="10"
                    />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <!--    <LinearLayout
                android:layout_marginLeft="@dimen/md_25"
                android:layout_marginRight="@dimen/md_25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/square_box"
                android:layout_marginTop="30dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/messageTextInputLayout3"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"
                        android:editable="false"
                        android:id="@+id/textactivitytype"/>
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/radiousertypegroup"
                        android:layout_column="0"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal"
                        android:layout_span="3">
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/radio_employee"
                            android:checked="true"
                            android:text="@string/male"></RadioButton>

                        <RadioButton
                            android:id="@+id/radio_manager"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female"></RadioButton>

                    </RadioGroup>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>-->

        <LinearLayout
            android:layout_marginLeft="@dimen/md_25"
            android:layout_marginRight="@dimen/md_25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/md_25">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/areaofoperation">

                <EditText
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:id="@+id/etowner_areaofoperation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"


                    />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="@dimen/md_25"
            android:layout_marginRight="@dimen/md_25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/md_25">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address">

                <EditText
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:id="@+id/etowner_postaladdress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>



        <LinearLayout
            android:layout_marginLeft="@dimen/md_25"
            android:layout_marginRight="@dimen/md_25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/md_25">



            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/category_workinghoursofowner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/workinghour"
                android:layout_margin="10dp"
                android:background="@color/background"
                android:popupBackground="@color/background"
                />




        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="@dimen/md_25"
            android:layout_marginRight="@dimen/md_25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/messageTextInputLayout9"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/requiredlabor"
                    android:editable="false"
                    android:id="@+id/textactivitytyp"/>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rg_interestedonworking"
                    android:layout_column="0"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    android:layout_span="3">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radio_daily"
                        android:checked="true"
                        android:text="@string/daily"></RadioButton>

                    <RadioButton
                        android:id="@+id/radio_weekly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weekly"></RadioButton>
                    <RadioButton
                        android:id="@+id/radio_monthly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/monthly"></RadioButton>

                </RadioGroup>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <Button
            android:text="@string/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_submitowner"
            android:layout_margin="25dp"
            android:textColor="#ffffff"
            android:background="@drawable/gradient"
            ></Button>

        <!--  <Button
              android:text="@string/logout"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/btn_logoutcontractor"
              android:layout_marginLeft="@dimen/md_25"
              android:layout_marginRight="@dimen/md_25"
              android:layout_marginTop="5dp"
              android:layout_marginBottom="@dimen/md_25"
              android:textColor="#ffffff"
              android:background="@color/colorAccent"
              ></Button>-->


    </LinearLayout>

</ScrollView>